--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-tailwind": "^0.2.1",
     "eslint-plugin-tailwindcss": "^3.4.4",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.4",
