--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,9 @@
     "tailwindcss"
   ],
   "rules": {
-    "tailwindcss/classnames-order": "warn",
+    "jsx-a11y/label-has-for":"off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "tailwindcss/classnames-order": "off",
     "tailwindcss/enforces-negative-arbitrary-values": "warn",
     "tailwindcss/enforces-shorthand": "warn",
     "tailwindcss/migration-from-tailwind-2": "warn",
@@ -66,6 +68,8 @@
         "ts-ignore": true
       }
     ],
+    "max-len": "off",
+    "import/prefer-default-export": 0,
     "react/jsx-props-no-spreading": 0,
     "@typescript-eslint/ban-ts-ignore": 0,
     "@typescript-eslint/no-unused-expressions": 0,
