--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "luxon": "^2.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
