--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./",
+    "paths": {
+      "@/components/*": ["src/components/*"],
+      "@/layouts/*": ["src/layouts/*"],
+      "@/provider/*": ["src/providers/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/styles/*": ["styles/*"],
+    }
   },
   "include": [
     "tailwind.config.js",
