--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -97,6 +97,13 @@
         "ts": "never",
         "tsx": "never"
       }
+    ],
+    "jsx-a11y/no-static-element-interactions": [
+      "off", {
+        "handlers": [
+          "onClick"
+        ]
+      }
     ]
   }
 }
