--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "luxon": "^2.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-modal": "^3.14.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.10",
     "@types/luxon": "^2.0.9",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "autoprefixer": "^10.4.2",
