--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -98,6 +98,9 @@
         "tsx": "never"
       }
     ],
+    "jsx-a11y/anchor-is-valid": "off",
+    "react/require-default-props": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": [
       "off", {
         "handlers": [
