--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "scripts": {
     "dev": "open http://localhost:3000 && next dev",
+    "dev:https": "local-ssl-proxy --source 3001 --target 3000",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
+    "start:https": "node server.js",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "prepare": "husky install"
