--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "framer-motion": "^6.2.8",
     "luxon": "^2.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
