--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.8",
     "luxon": "^2.3.0",
