--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
+    "@react-hook/media-query": "^1.1.1",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.8",
     "luxon": "^2.3.0",
