--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,17 +1,34 @@
-name: GitHub Actions Demo
+name: Next.js Pipelines
+
 on: [push]
+
 jobs:
-  Explore-GitHub-Actions:
+  test-lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Clone Repository
+        uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: | 
+          echo "Running Installing Dependecies ... "
+          npm install
+      - name: Run Linting
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          echo "Running Linting ... "
+          npm run lint
+
+  build:
+    name: build
+    runs-on: ubuntu-laatest
+    steps:
+      -name: Clone Repository
+        uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: | 
+          echo "Running Installing Dependecies ... "
+          npm install
+      - name: Run Build
+        run: |
+          echo "Build app ... "
+          npm run build
