--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,13 +13,30 @@ jobs:
 
       - name: Install dependencies
         run: | 
-          echo "Running Installing Dependecies ... "
+          echo "Running installing dependecies ... "
           npm install
 
-      - name: Run Linting
+      - name: Run linting
         run: |
-          echo "Running Linting ... "
+          echo "Running linting ... "
           npm run lint
+
+  test:
+    name: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: | 
+          echo "Running installing dependecies ... "
+          npm install
+
+      - name: Run test
+        run: |
+          echo "Running tests ... "
 
   build:
     name: build
@@ -31,7 +48,7 @@ jobs:
 
       - name: Install dependencies
         run: | 
-          echo "Running Installing Dependecies ... "
+          echo "Running installing dependecies ... "
           npm install
 
       - name: Run build
