--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_SERVICE_ID="insert-your-id"
 NEXT_PUBLIC_TEMPLATE_ID="insert-your-id"
 NEXT_PUBLIC_USER_ID="insert-your-id"
+NEXT_PUBLIC_LINKEDIN="insert-url"
+NEXT_PUBLIC_GITHUB="insert-url"
